cc-base-app/main/default/objects/Guest_Feedback__c/Guest_Feedback__c.object-meta.xml
<CustomObject>
    <label>Guest Feedback</label>
    <nameField>
        <displayFormat>GF-{0000}</displayFormat>
        <label>Guest Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>