cc-base-app/main/default/objects/Guest_Feedback__c/fields/AI_Sentiment_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Sentiment_Summary__c</fullName>
    <label>AI Sentiment Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>