cc-base-app/main/default/objects/Guest_Feedback__c/fields/Stay_Type__c.field-meta.xml
<CustomField>
    <fullName>Stay_Type__c</fullName>
    <label>Stay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>